--- a/feature_engineering1.ipynb
+++ b/feature_engineering1.ipynb
@@ -25,15 +25,14 @@
         "id": "gJiL8swzs61w"
       },
       "source": [
-        "## Identification of Attribute Types"
+        "**Data Loading and Exploration**"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "L1k4DzxOs61x",
         "outputId": "06403d26-dbe9-4312-af36-30446b643dde"
@@ -55,7 +54,7 @@
         "# Display the first few rows of the dataset\n",
         "df.head()"
       ],
-      "execution_count": 161,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -491,7 +490,7 @@
         "id": "BpKvywjzs613"
       },
       "source": [
-        "## Handling Missing Data"
+        " **Handling Missing Data**"
       ]
     },
     {
@@ -512,7 +511,7 @@
         "})\n",
         "missing_data_summary[missing_data_summary['Missing Data Count'] > 0]\n"
       ],
-      "execution_count": 162,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -797,6 +796,39 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Feature Engineering**"
+      ],
+      "metadata": {
+        "id": "mbp09JWdRcna"
+      }
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DTJ80-aLs62n"
+      },
+      "source": [
+        "# Create an interaction term between 'sqm' and 'no_rooms'\n",
+        "df['sqm_per_room'] = df['sqm'] / df['no_rooms'] # Removed extra indentation\n",
+        "\n",
+        "# Create a ratio feature of 'purchase_price' to 'sqm'\n",
+        "df['price_per_sqm'] = df['purchase_price'] / df['sqm'] # Removed extra indentation"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " **Data Cleaning**"
+      ],
+      "metadata": {
+        "id": "E4B7N-6wRoEL"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "tAsSrpMAs617",
@@ -846,7 +878,7 @@
         "# Print the resulting data\n",
         "print(df.head())\n"
       ],
-      "execution_count": 163,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -891,21 +923,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "DTJ80-aLs62n"
-      },
-      "source": [
-        "# Create an interaction term between 'sqm' and 'no_rooms'\n",
-        "df['sqm_per_room'] = df['sqm'] / df['no_rooms'] # Removed extra indentation\n",
-        "\n",
-        "# Create a ratio feature of 'purchase_price' to 'sqm'\n",
-        "df['price_per_sqm'] = df['purchase_price'] / df['sqm'] # Removed extra indentation"
-      ],
-      "execution_count": 164,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "iEC-Hs0es62Z"
@@ -941,79 +958,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "GifZDYjcs618"
-      },
-      "source": [
-        "## Normalization of Numeric Attributes"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "5LpqYRGEs619",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "c7f26bc8-fd5f-45fd-c441-bba9367b8bfa"
-      },
-      "source": [
-        "# Import necessary libraries\n",
-        "from sklearn.preprocessing import MinMaxScaler\n",
-        "\n",
-        "# Identify numeric columns dynamically\n",
-        "numeric_cols = df.select_dtypes(include=[np.number]).columns\n",
-        "\n",
-        "# Create a MinMaxScaler object\n",
-        "scaler = MinMaxScaler()\n",
-        "\n",
-        "# Normalize numeric columns\n",
-        "df[numeric_cols] = scaler.fit_transform(df[numeric_cols])\n",
-        "\n",
-        "# Print the first few rows of the normalized data\n",
-        "print(\"Normalized Data:\")\n",
-        "print(df[numeric_cols].head())\n"
-      ],
-      "execution_count": 165,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Normalized Data:\n",
-            "   year_build  purchase_price  %_change_between_offer_and_purchase  no_rooms  \\\n",
-            "0    0.973633        0.136743                             0.469388  0.285714   \n",
-            "1    0.864258        0.068916                             0.500000  0.071429   \n",
-            "2    0.926758        0.094078                             0.459184  0.214286   \n",
-            "3    0.977539        0.030189                             0.377551  0.214286   \n",
-            "4    0.942383        0.037738                             0.397959  0.142857   \n",
-            "\n",
-            "        sqm  sqm_price  zip_code  nom_interest_rate%  dk_ann_infl_rate%  \\\n",
-            "0  0.121086   0.608373  0.182235            0.326316           0.393020   \n",
-            "1  0.020877   0.985435  0.103144            0.326316           0.244832   \n",
-            "2  0.089770   0.539366  0.182235            0.326316           0.173691   \n",
-            "3  0.167015   0.112413  0.374650            0.326316           0.383624   \n",
-            "4  0.058455   0.317731  0.276205            0.326316           0.277315   \n",
-            "\n",
-            "   yield_on_mortgage_credit_bonds%  year     month       day  sqm_per_room  \\\n",
-            "0                         0.247124   1.0  0.818182  0.766667      0.048087   \n",
-            "1                         0.362168   1.0  0.818182  0.766667      0.036805   \n",
-            "2                         0.275000   1.0  0.818182  0.733333      0.047252   \n",
-            "3                         0.431858   1.0  0.818182  0.733333      0.085905   \n",
-            "4                         0.215044   1.0  0.818182  0.700000      0.045859   \n",
-            "\n",
-            "   price_per_sqm  \n",
-            "0       0.608373  \n",
-            "1       0.985435  \n",
-            "2       0.539366  \n",
-            "3       0.112413  \n",
-            "4       0.317731  \n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "5KiXPE8ws61-"
       },
       "source": [
@@ -1026,7 +970,7 @@
         "id": "OkbNOrk3s62T"
       },
       "source": [
-        "## Handling Outliers"
+        "**Outlier Handling**"
       ]
     },
     {
@@ -1075,7 +1019,7 @@
         "# Print the shape of the DataFrame with capped outliers\n",
         "print(\"\\nShape of DataFrame with capped outliers:\", df_capped.shape)"
       ],
-      "execution_count": 166,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1099,6 +1043,79 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "GifZDYjcs618"
+      },
+      "source": [
+        "## Normalization of Numeric Attributes"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5LpqYRGEs619",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c7f26bc8-fd5f-45fd-c441-bba9367b8bfa"
+      },
+      "source": [
+        "# Import necessary libraries\n",
+        "from sklearn.preprocessing import MinMaxScaler\n",
+        "\n",
+        "# Identify numeric columns dynamically\n",
+        "numeric_cols = df.select_dtypes(include=[np.number]).columns\n",
+        "\n",
+        "# Create a MinMaxScaler object\n",
+        "scaler = MinMaxScaler()\n",
+        "\n",
+        "# Normalize numeric columns\n",
+        "df[numeric_cols] = scaler.fit_transform(df[numeric_cols])\n",
+        "\n",
+        "# Print the first few rows of the normalized data\n",
+        "print(\"Normalized Data:\")\n",
+        "print(df[numeric_cols].head())\n"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Normalized Data:\n",
+            "   year_build  purchase_price  %_change_between_offer_and_purchase  no_rooms  \\\n",
+            "0    0.973633        0.136743                             0.469388  0.285714   \n",
+            "1    0.864258        0.068916                             0.500000  0.071429   \n",
+            "2    0.926758        0.094078                             0.459184  0.214286   \n",
+            "3    0.977539        0.030189                             0.377551  0.214286   \n",
+            "4    0.942383        0.037738                             0.397959  0.142857   \n",
+            "\n",
+            "        sqm  sqm_price  zip_code  nom_interest_rate%  dk_ann_infl_rate%  \\\n",
+            "0  0.121086   0.608373  0.182235            0.326316           0.393020   \n",
+            "1  0.020877   0.985435  0.103144            0.326316           0.244832   \n",
+            "2  0.089770   0.539366  0.182235            0.326316           0.173691   \n",
+            "3  0.167015   0.112413  0.374650            0.326316           0.383624   \n",
+            "4  0.058455   0.317731  0.276205            0.326316           0.277315   \n",
+            "\n",
+            "   yield_on_mortgage_credit_bonds%  year     month       day  sqm_per_room  \\\n",
+            "0                         0.247124   1.0  0.818182  0.766667      0.048087   \n",
+            "1                         0.362168   1.0  0.818182  0.766667      0.036805   \n",
+            "2                         0.275000   1.0  0.818182  0.733333      0.047252   \n",
+            "3                         0.431858   1.0  0.818182  0.733333      0.085905   \n",
+            "4                         0.215044   1.0  0.818182  0.700000      0.045859   \n",
+            "\n",
+            "   price_per_sqm  \n",
+            "0       0.608373  \n",
+            "1       0.985435  \n",
+            "2       0.539366  \n",
+            "3       0.112413  \n",
+            "4       0.317731  \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "LZhgplTts61_"
       },
       "source": [
@@ -1109,8 +1126,7 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "37tPsit7s62A",
         "outputId": "083ccb1d-e857-403c-98c9-a967901dc0b9"
@@ -1120,7 +1136,7 @@
         "expensive_cities = df.groupby('city')['purchase_price'].mean().sort_values(ascending=False).head(5)\n",
         "expensive_cities"
       ],
-      "execution_count": 167,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1195,8 +1211,7 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "TmaxnJSes62B",
         "outputId": "014e39b1-9758-450a-df7c-505b444a173c"
@@ -1206,7 +1221,7 @@
         "unique_zip_cities = df.groupby('city')['zip_code'].nunique().sort_values(ascending=False).head(5)\n",
         "unique_zip_cities"
       ],
-      "execution_count": 168,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1780,6 +1795,15 @@
       "source": [
         "### Explanation: Visualizations such as histograms, boxplots, and scatter plots help in understanding the distribution and relationships of different attributes in the dataset. They provide valuable insights for data preprocessing and analysis."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Feature correlation is the relationship between two or more features in a dataset. A positive correlation means that as one feature increases, the other tends to increase as well, while a negative correlation indicates that as one feature increases, the other decreases. Correlation values close to +1 or -1 indicate strong relationships, while values near 0 suggest no correlation. Understanding feature correlations helps identify which features are closely related, potentially reducing redundancy and enhancing the performance of machine learning models by selecting non-correlated features for prediction tasks."
+      ],
+      "metadata": {
+        "id": "zzhydgxDRBuc"
+      }
     },
     {
       "cell_type": "markdown",
